--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "livedocs",
+  "name": "jsm_live_docs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.3.7",
-    "@clerk/themes": "^2.1.25",
+    "@clerk/nextjs": "^5.2.4",
+    "@clerk/themes": "^2.1.12",
     "@lexical/react": "^0.16.1",
-    "@liveblocks/client": "^2.6.0",
-    "@liveblocks/node": "^2.6.0",
-    "@liveblocks/react": "^2.6.0",
-    "@liveblocks/react-lexical": "^2.6.0",
-    "@liveblocks/react-ui": "^2.6.0",
+    "@liveblocks/client": "^2.3.0",
+    "@liveblocks/node": "^2.3.0",
+    "@liveblocks/react": "^2.3.0",
+    "@liveblocks/react-lexical": "^2.3.0",
+    "@liveblocks/react-ui": "^2.3.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@sentry/nextjs": "^8.27.0",
+    "@sentry/nextjs": "^8.18.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsm-editor": "^0.0.12",
     "lexical": "^0.16.1",
-    "lucide-react": "^0.436.0",
+    "lucide-react": "^0.408.0",
     "nanoid": "^5.0.7",
-    "next": "14.2.7",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -40,7 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
